// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Normal route config 1`] = `
<div>
  <div>
    <div>
      Main
    </div>
  </div>
</div>
`;

exports[`Normal route config 2`] = `
<div>
  <div>
    <div>
      Fancy
    </div>
  </div>
</div>
`;

exports[`Normal route config 3`] = `
<div>
  <div>
    <div>
      Stuff
    </div>
  </div>
</div>
`;

exports[`Normal route config 4`] = `
<div>
  <div>
    <div>
      browserHistoryCompat.push: 
      function () { [native code] }
    </div>
  </div>
</div>
`;
